--- a/.github/workflows/deploy_to_oss.yml
+++ b/.github/workflows/deploy_to_oss.yml
@@ -33,7 +33,7 @@ jobs:
       #     # 其他可选参数根据需要添加，确保适当的缩进和格式
       - name: upload files to OSS
         uses: fangbinwei/aliyun-oss-website-action@v1
-        with:
+        env:
             accessKeyId: ${{ secrets.ACCESSID }}
             accessKeySecret: ${{ secrets.ACCESSSECRET }}
             bucket: photography-website
